--- a/C# OOP Basics/01. DefiningClassec/Ex01. DefiningClasses/Ex01. DefiningClasses.csproj
+++ b/C# OOP Basics/01. DefiningClassec/Ex01. DefiningClasses/Ex01. DefiningClasses.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Ex01._DefiningClasses</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RandomNameGeneratorLibrary" Version="1.2.2" />
+  </ItemGroup>
+
 </Project>
