--- a/C# OOP Advanced/04. ReflectionAndAttributes/01. Stealer/01. Stealer.csproj
+++ b/C# OOP Advanced/04. ReflectionAndAttributes/01. Stealer/01. Stealer.csproj
@@ -3,11 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_02._AnimalDoctor</RootNamespace>
+    <RootNamespace>_01._Stealer</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  </ItemGroup>
 
 </Project>
